# mlops-zoomcamp

./: prefect.yaml  pyproject.toml
.prefect/: flows.json
answers/: exercise01.txt
exercises/: exercise-01.ipynb
exercises/exercise-02/: .gitignore  exercise-02.ipynb  hpo.py  register_model.py  train.py
exercises/exercise-02-wandb/: exercise-02-wandb.ipynb  train.py
exercises/exercise-03/: exercise03.ipynb  orchestrate_mail.py  orchestrate_md_artifact.py
exercises/exercise-04/: Dockerfile  answers.md  starter.ipynb  starter.py
exercises/exercise-05/: answers.md  baseline_model_nyc_taxi_data.ipynb  docker-compose.yml  evidently_metrics_calculation.py
exercises/exercise-05/dashboards/: data_drift.json
exercises/exercise-05/data/: green_tripdata_2023-03.parquet  reference.parquet
exercises/exercise-06/: .env.example  answers.md  batch.py  docker-compose.yaml  integration_test.py  sum_pred_durations.py
exercises/exercise-06/tests/: test_batch.py
