[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Alvaro-Kothe <kothe65@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
pandas = "^2.0.1"
numpy = "^1.24.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
pyarrow = "^11.0.0"
fastparquet = "^2023.4.0"
mlflow = "^2.3.1"
xgboost = "^1.7.5"
hyperopt = "^0.2.7"
boto3 = "^1.26.123"
optuna = "^3.1.1"
wandb = "^0.15.3"
prefect = "^2.10.12"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.3"
black = "^23.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
